// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`every day of 2025-2027 assembles a whole Mass > in brazil 1`] = `
[
  "sanctorale.01-22 prayerOverOfferings empty in la (2025-01-22 sanctorale.01-22)",
  "sanctorale.01-22 prayerOverOfferings empty in en-US (2025-01-22 sanctorale.01-22)",
  "sanctorale.01-22 prayerOverOfferings empty in pt-BR (2025-01-22 sanctorale.01-22)",
  "sanctorale.05-10 prayerOverOfferings empty in la (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 prayerOverOfferings empty in en-US (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 prayerOverOfferings empty in pt-BR (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 postcommunion empty in la (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 postcommunion empty in en-US (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 postcommunion empty in pt-BR (2025-05-10 sanctorale.05-10)",
  "sanctorale.06-05 prayerOverOfferings empty in la (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 prayerOverOfferings empty in en-US (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 prayerOverOfferings empty in pt-BR (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 postcommunion empty in la (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 postcommunion empty in en-US (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 postcommunion empty in pt-BR (2025-06-05 sanctorale.06-05)",
  "sanctorale.07-23 prayerOverOfferings empty in la (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 prayerOverOfferings empty in en-US (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 prayerOverOfferings empty in pt-BR (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 postcommunion empty in la (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 postcommunion empty in en-US (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 postcommunion empty in pt-BR (2025-07-23 sanctorale.07-23)",
  "sanctorale.08-09 prayerOverOfferings empty in la (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 prayerOverOfferings empty in en-US (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 prayerOverOfferings empty in pt-BR (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 postcommunion empty in la (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 postcommunion empty in en-US (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 postcommunion empty in pt-BR (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-23 prayerOverOfferings empty in la (2025-08-23 sanctorale.08-23)",
  "sanctorale.08-23 prayerOverOfferings empty in en-US (2025-08-23 sanctorale.08-23)",
  "sanctorale.08-23 postcommunion empty in la (2025-08-23 sanctorale.08-23)",
  "sanctorale.08-23 postcommunion empty in en-US (2025-08-23 sanctorale.08-23)",
  "sanctorale.10-16 prayerOverOfferings empty in la (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 prayerOverOfferings empty in en-US (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 prayerOverOfferings empty in pt-BR (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 postcommunion empty in la (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 postcommunion empty in en-US (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 postcommunion empty in pt-BR (2025-10-16 sanctorale.10-16)",
  "sanctorale.12-12 prayerOverOfferings empty in la (2025-12-12 sanctorale.12-12)",
  "sanctorale.12-12 prayerOverOfferings empty in pt-BR (2025-12-12 sanctorale.12-12)",
  "sanctorale.12-12 postcommunion empty in la (2025-12-12 sanctorale.12-12)",
  "sanctorale.12-12 postcommunion empty in pt-BR (2025-12-12 sanctorale.12-12)",
  "common.holy-men-and-women.7 prayerOverOfferings empty in pt-BR (2026-06-19 sanctorale.06-19)",
  "common.holy-men-and-women.7 postcommunion empty in pt-BR (2026-06-19 sanctorale.06-19)",
]
`;

exports[`every day of 2025-2027 assembles a whole Mass > in the General Calendar 1`] = `
[
  "sanctorale.01-22 prayerOverOfferings empty in la (2025-01-22 sanctorale.01-22)",
  "sanctorale.01-22 prayerOverOfferings empty in en-US (2025-01-22 sanctorale.01-22)",
  "sanctorale.01-22 prayerOverOfferings empty in pt-BR (2025-01-22 sanctorale.01-22)",
  "sanctorale.05-10 prayerOverOfferings empty in la (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 prayerOverOfferings empty in en-US (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 prayerOverOfferings empty in pt-BR (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 postcommunion empty in la (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 postcommunion empty in en-US (2025-05-10 sanctorale.05-10)",
  "sanctorale.05-10 postcommunion empty in pt-BR (2025-05-10 sanctorale.05-10)",
  "sanctorale.06-05 prayerOverOfferings empty in la (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 prayerOverOfferings empty in en-US (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 prayerOverOfferings empty in pt-BR (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 postcommunion empty in la (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 postcommunion empty in en-US (2025-06-05 sanctorale.06-05)",
  "sanctorale.06-05 postcommunion empty in pt-BR (2025-06-05 sanctorale.06-05)",
  "sanctorale.07-23 prayerOverOfferings empty in la (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 prayerOverOfferings empty in en-US (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 prayerOverOfferings empty in pt-BR (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 postcommunion empty in la (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 postcommunion empty in en-US (2025-07-23 sanctorale.07-23)",
  "sanctorale.07-23 postcommunion empty in pt-BR (2025-07-23 sanctorale.07-23)",
  "sanctorale.08-09 prayerOverOfferings empty in la (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 prayerOverOfferings empty in en-US (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 prayerOverOfferings empty in pt-BR (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 postcommunion empty in la (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 postcommunion empty in en-US (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-09 postcommunion empty in pt-BR (2025-08-09 sanctorale.08-09)",
  "sanctorale.08-23 prayerOverOfferings empty in la (2025-08-23 sanctorale.08-23)",
  "sanctorale.08-23 prayerOverOfferings empty in en-US (2025-08-23 sanctorale.08-23)",
  "sanctorale.08-23 postcommunion empty in la (2025-08-23 sanctorale.08-23)",
  "sanctorale.08-23 postcommunion empty in en-US (2025-08-23 sanctorale.08-23)",
  "sanctorale.10-16 prayerOverOfferings empty in la (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 prayerOverOfferings empty in en-US (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 prayerOverOfferings empty in pt-BR (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 postcommunion empty in la (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 postcommunion empty in en-US (2025-10-16 sanctorale.10-16)",
  "sanctorale.10-16 postcommunion empty in pt-BR (2025-10-16 sanctorale.10-16)",
  "sanctorale.12-12 prayerOverOfferings empty in la (2025-12-12 sanctorale.12-12)",
  "sanctorale.12-12 prayerOverOfferings empty in pt-BR (2025-12-12 sanctorale.12-12)",
  "sanctorale.12-12 postcommunion empty in la (2025-12-12 sanctorale.12-12)",
  "sanctorale.12-12 postcommunion empty in pt-BR (2025-12-12 sanctorale.12-12)",
  "common.holy-men-and-women.7 prayerOverOfferings empty in pt-BR (2026-06-19 sanctorale.06-19)",
  "common.holy-men-and-women.7 postcommunion empty in pt-BR (2026-06-19 sanctorale.06-19)",
  "tempore.ordinary-time.week-13.sunday firstReading empty in pt-BR (2026-06-28 tempore.ordinary-time.week-13)",
]
`;
